--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Returning to App...</title>
-  <meta http-equiv="refresh" content="0; url=fragerapp://stripe-onboarding/return" />
+  <meta http-equiv="refresh" content="0; url=fragerfantasy://stripe-onboarding/return" />
   <script type="text/javascript">
-    window.location.href = "fragerapp://stripe-onboarding/return";
+    window.location.href = "fragerfantasy://stripe-onboarding/return";
   </script>
 </head>
 <body>
